# SU-Theory-in-python

./: LICENSE  README.md  pyproject.toml  scratch1.ipynb  scratch2.ipynb
.github/workflows/: python-publish.yml
Examples/: Our_Attempt_at_Finding_an_Example.ipynb  Presentation_Examples.ipynb  SU_Example.ipynb
SU_Theory/: __init__.py  independence.py  polynomial_automorphisms.py  polynomial_endomorphisms.py
SU_venv/: pyvenv.cfg
